# Advent-of-Hardcaml2025

./: README.md
day1/: dune-project
day1/_build/: .db  .digest-db  log
day1/src/: day1.ml  dune
day1/test/: dune  test_day1.ml
day10/: dune-project
day10/_build/: .db  .digest-db  log
day10/_build/default/: day10.dune-package  day10.install
day10/_build/default/.dune/: configurator.v2
day10/_build/default/src/: day10.cma  day10.cmxa  day10.cmxs  day10.ml  day10.pp.ml
day10/_build/default/src/.day10.objs/byte/: day10.cmi  day10.cmo  day10.cmt
day10/_build/default/src/.day10.objs/native/: day10.cmx
day10/_build/default/src/.merlin-conf/: lib-day10
day10/_build/default/test/: test_day10.ml  test_day10.pp.ml
day10/_build/default/test/.merlin-conf/: exe-test_day10
day10/_build/default/test/.test_day10.eobjs/byte/: dune__exe__Test_day10.cmi  dune__exe__Test_day10.cmti
day10/_build/default/test/.test_day10.eobjs/native/: dune__exe__Test_day10.cmx
day10/src/: day10.ml  dune
day10/test/: dune  test_day10.ml
day12/: dune-project
day12/_build/: .db  .digest-db  log
day12/src/: day12.ml  dune
day12/test/: dune  test_day12.ml
day3/: dune-project
day3/_build/: .db  .digest-db  log
day3/src/: day3.ml  dune
day3/test/: dune  test_day3.ml
day4/: dune-project
day4/_build/: .db  .digest-db  log
day4/src/: day4.ml  dune
day4/test/: dune  test_day4.ml
day5/: dune-project
day5/_build/: .db  .digest-db  log
day5/src/: day5.ml  dune
day5/test/: dune  test_day5.ml
day7/: dune-project
day7/_build/: .db  log  (+1 more)
day9/: dune-project
(+145 files in other folders)
